feat: implementando relatorio step a step com lógica para whatsapp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <p class="hero-experience">
                             <span class="text-blue">Atendimento personalizado, agilidade e confiança há mais de 20 anos.</span>
                         </p>
-                        <button class="cta-button">Faça sua cotação agora</button>
+                        <button class="cta-button" onclick="window.location.href='pages/relatorio.html'">Faça sua cotação agora</button>
                         
                         <div class="rating">
                             <div class="stars">
